Add link to the paper

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{url_for('sankey')}}">SANKEY PLOT</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{url_for('umap')}}">3D UMAP</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{{url_for('about')}}">ABOUT US</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" >DOWNLOAD PAPER</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href = "https://bmcmedicine.biomedcentral.com/counter/pdf/10.1186/s12916-022-02551-6.pdf">DOWNLOAD PAPER</a></li>
                     </ul>
                 </div>
             </div>
